# IRISC-OBSW

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  header_template.txt
lib_arm/: .gitignore
output/: harry_plotter.pyw
output/guiding/: .gitignore
output/guiding/star_tracker/: .gitignore
output/logs/: .gitignore
src/: global_utils.c  global_utils.h
src/camera/: camera.c  camera.h
src/camera/Guiding_Camera/: guiding_camera.c
src/camera/NIR_Camera/: nir_camera.h
src/camera/Sanity_Camera/: sanity_camera.h
src/camera/camera_control/: camera_control.c  camera_control.h
src/camera/camera_utils/: camera_utils.c  camera_utils.h
src/camera/guiding_camera/: guiding_camera.c  guiding_camera.h
src/camera/nir_camera/: nir_camera.c  nir_camera.h
src/camera/sanity_camera/: sanity_camera.c  sanity_camera.h
src/command/: command.c  command.h
src/control_sys/: control_sys.c  control_sys.h
src/control_sys/current_target/: current_target.c  current_target.h
src/control_sys/gimbal/: gimbal.c  gimbal.h
src/control_sys/kalman_filter/: kalman_filter.c  kalman_filter.h
src/control_sys/pid/: pid.c  pid.h
src/control_sys/stabilization/: CMakeLists.txt  harry_plotter.pyw  simdata.txt  stabilization.c  stabilization.h
src/control_sys/stabilization/R2019a/rtw/c/src/common/: rt_main.c
src/control_sys/stabilization/simple_sim_grt_rtw/: builtin_typeid_types.h  codeInfo.mat  make_exception.mat  rtGetInf.c  rtGetNaN.c  rtGetNaN.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  simple_sim.bat  simple_sim_manifest.txt  simple_sim_types.h
src/control_sys/target_selection/: target_selection.c  target_selection.h
src/data_storage/: data_storage.c  data_storage.h
src/e_link/: e_link.c  e_link.h
src/global_utils/: global_utils.c  global_utils.h
src/gpio/: gpio.c  gpio.h
src/i2c/: i2c.c  i2c.h
src/img_processing/: img_processing.c  img_processing.h
src/img_processing/data_queue/: data_queue.c  data_queue.h
src/img_processing/image_handler/: image_handler.c  image_handler.h
src/init/: init.c  init.h
src/mode/: mode.c  mode.h
src/sensors/: sensors.c  sensors.h
src/sensors/encoder/: encoder.c  encoder.h
src/sensors/gps/: gps.c  gps.h
src/sensors/gyroscope/: gyroscope.c  gyroscope.h
src/sensors/orientation/: orientation.c  orientation.h
src/sensors/sensor_poller/: sensor_poller.c  sensor_poller.h
src/sensors/sensor_poller/encoder_poller/: encoder_poller.c  encoder_poller.h
src/sensors/sensor_poller/gps_poller/: gps_poller.c  gps_poller.h
src/sensors/sensor_poller/gyroscope_poller/: gyroscope_poller.c  gyroscope_poller.h
src/sensors/sensor_poller/star_tracker_poller/: star_tracker_poller.c  star_tracker_poller.h
src/sensors/sensor_poller/temperature_poller/: temperature_poller.c  temperature_poller.h
src/sensors/star_tracker/: star_tracker.c  star_tracker.h  star_tracker_caller.c  star_tracker_caller.h
src/sensors/sun/: sun.c  sun.h
src/sensors/temperature/: temperature.c  temperature.h
src/spi/: spi.c  spi.h
src/telemetry/: telemetry.c  telemetry.h
src/telemetry/downlink/: downlink.c  downlink.h
src/telemetry/downlink_queue/: downlink_queue.c  downlink_queue.h
src/thermal/: thermal.c  thermal.h
src/tracking/: tracking.c  tracking.h
src/tracking/Controller/: controller.c  controller.h
src/tracking/Current_Target/: current_target.c  current_target.h
src/tracking/controller/: controller.c  controller.h  test.c
src/tracking/controller/simple_sim_grt_rtw/: buildInfo.mat  codedescriptor.dmr  defines.txt  modelsources.txt  multiword_types.h  rtGetInf.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  simple_sim.c  simple_sim.h  simple_sim.mk  simple_sim.rsp  simple_sim_private.h
src/tracking/current_target/: current_target.c  current_target.h
src/tracking/gimbal/: gimbal.c  gimbal.h
src/tracking/target_selecting/: target_selecting.c  target_selecting.h
src/watchdog/: watchdog.c  watchdog.h
